<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp">

     <TextView
         android:id="@+id/welcome"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"


         android:text="@string/welcome"
         android:textSize="30dp"/>
      <ImageView
          android:id="@+id/logo"
          android:layout_width="200dp"
          android:layout_height="200dp"
          android:layout_below="@+id/welcome"
          android:layout_centerHorizontal="true"

          android:src="@drawable/chelseabackground" />
       <TextView
           android:id="@+id/question"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_below="@+id/logo"
           android:gravity="center"

           android:text="@string/question"
           android:textSize="20dp"/>

        <!--pytanie 1-->
        <LinearLayout
            android:id="@+id/quest1answer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/question"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:paddingTop="15dp">

        <TextView
            android:id="@+id/pytanie1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/question"

            android:gravity="left"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:text="@string/question1"
            android:textSize="15dp"
             />
        <RadioGroup
            android:id="@+id/pytanie1odp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pytanie1"
            android:orientation="horizontal"
            android:paddingTop="20dp">
            <RadioButton
                android:id="@+id/pytanie1odp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest1_answ1"
                />
            <RadioButton
                android:id="@+id/pytanie1odp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest1_answ2"
               />
            <RadioButton
                android:id="@+id/pytanie1odp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest1_answ3"
                />
            <RadioButton
                android:id="@+id/pytanie1odp4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest1_answ4"
                />
        </RadioGroup>
        </LinearLayout>

        <!--pytanie 2-->
        <LinearLayout
            android:id="@+id/quest2answer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/quest1answer"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:paddingTop="15dp">

        <TextView
            android:id="@+id/pytanie2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/pytanie1odp"

            android:gravity="left"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:text="@string/question2"
            android:textSize="15dp"/>
        <LinearLayout
            android:id="@+id/pytanie2odp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/pytanie2"
            android:orientation="vertical"
            android:paddingTop="15dp">
          <CheckBox
              android:id="@+id/checkBox1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/quest2_answ1"/>
            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest2_answ2"/>
            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest2_answ3"/>
            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest2_answ4"/>



        </LinearLayout>
        </LinearLayout>
        <!--pytanie 3-->
        <LinearLayout
            android:id="@+id/quest3answer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/quest2answer"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:paddingTop="15dp">

        <TextView
            android:id="@+id/pytanie3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/pytanie2odp"

            android:gravity="left"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:text="@string/question3"
            android:textSize="15dp"/>
        <EditText
            android:id="@+id/pytanie3odp"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/pytanie3"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:text="@string/quest3_answer" />
            </LinearLayout>

         <!--Pytanie 4  -->
        <LinearLayout
            android:id="@+id/quest4answer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/quest3answer"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:paddingTop="15dp">

        <TextView
            android:id="@+id/pytanie4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/pytanie3odp"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:text="@string/question4"
            android:textSize="15dp"/>
        <RadioGroup
            android:id="@+id/pytanie4odp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/pytanie4"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="20dp">
            <RadioButton
                android:id="@+id/pytanie4odp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest4_answ1"/>
            <RadioButton
                android:id="@+id/pytanie4odp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest4_answ2"/>


        </RadioGroup>
        </LinearLayout>


        <!--Pytanie 5-->
        <LinearLayout
            android:id="@+id/quest5answer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/quest4answer"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:paddingTop="15dp">
        <TextView
        android:id="@+id/pytanie5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/quest4answer"

        android:gravity="left"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:text="@string/question5"
        android:textSize="15dp"/>
        <RadioGroup
            android:id="@+id/pytanie5odp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/pytanie5"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="20dp">
        <RadioButton
            android:id="@+id/pytanie5odp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest5_answ1"/>
        <RadioButton
            android:id="@+id/pytanie5odp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest5_answ2"/>
            <RadioButton
                android:id="@+id/pytanie5odp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest5_answ3"/>

        </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/quest5answer"
            android:gravity="center_horizontal"
            android:paddingTop="50dp">


        <Button
            android:id="@+id/buttonCheck"
            android:layout_width="100dp"



            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:onClick="onCheckClick"
            android:paddingTop="15dp"
            android:text="@string/buttonCheck"/>
            <Button
                android:id="@+id/buttonReset"
                android:layout_width="100dp"

                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:onClick="Reset"
                android:paddingTop="15dp"
                android:text="@string/buttonReset"/>

        </LinearLayout>


    </RelativeLayout>
    </ScrollView>